Add comprehensive React frontend for Location Rating Service
Features:
- User authentication (login/register) with JWT
- Location browsing, search, and filtering
- Detailed location pages with ratings and comments
- Create/edit location forms with image upload
- User profile with locations and reviews
- Responsive design with modern UI
- Integration with Spring Boot backend via Axios

Technical stack:
- React 18 with hooks
- Vite for fast development
- React Router 6 for routing
- Context API for state management
- React Dropzone for image uploads
- React Toastify for notifications
- Leaflet for maps integration

Backend changes:
- Updated CORS configuration to allow React frontend
- Set allowCredentials to true for proper auth handling

Documentation:
- Added comprehensive frontend README
- Updated main README with frontend setup instructions